InnoDB: Add option for disabling innodb_status.<pid> files. InnoDB: Implement tmpfile() differently on Windows (Bug #3998)